--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^10.9.0",
+    "bulma": "^1.0.0",
     "pinia": "^2.1.7",
+    "uuid": "^9.0.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
@@ -29,7 +32,8 @@
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.0.3",
-    "typescript": "~5.4.0",
+    "sass": "^1.72.0",
+    "typescript": "~5.4.3",
     "vite": "^5.1.6",
     "vue-tsc": "^2.0.6"
   }
